# ROB421Project

./: README.md
angle_extractor/: package.xml  setup.cfg  setup.py
angle_extractor/angle_extractor/: anglepublisher.py  correct_angles.py
camera_driver/: README.md  package.xml  setup.py
camera_driver/camera_driver/: camera_driver.py
camera_driver/launch/: cameralaunch.py
mediapipe_pose/: package.xml  setup.py
mediapipe_pose/mediapipe_pose/: pose_estimator.py
move_sami/: package.xml  setup.cfg  setup.py
move_sami/move_sami/: audio_manager.py  move_sami.py  read_json.py
pose_interfaces/: CMakeLists.txt  package.xml
pose_interfaces/msg/: Landmark.msg  PoseLandmarks.msg
pose_interfaces/srv/: EnablePose.srv
