<?xml version="1.0"?>
<package format="3">
  <name>pose_interfaces</name>
  <version>0.1.0</version>
  <description>Custom messages services for MediaPipe pose estimation</description>
  <maintainer email="martnat8@oregonstate.edu">Teft</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

